# ml-final-mnist-cnn

./: .gitignore  README.md  REPORT.md  inspect_mnist.py  mnist_final_cpu.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
results/: ablation_results.csv  ablation_results.md  metrics_summary.txt
src/mnist_project/: __init__.py  cli.py  data.py  engine.py  model.py
tests/: conftest.py  test_data_loading.py
