[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-final-project"
version = "1.0.0"
description = "Reproducible MNIST CNN final project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch>=2.0"
]

[project.scripts]
mnist-train = "mnist_project.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
